--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -1,40 +1,18 @@
 .clockContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(var(--brand-grey-rgb), 0);
+    border-radius: var(--radius-xs);
+    padding: 0 var(--space-sm);
+    font-size: calc(14rem/ 16);
+    font-variation-settings: var(--var-sm);
+    height: 1.5rem;
+}
+
+.clockContainer:hover {
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: rgba(var(--brand-grey-rgb), 0.12);
-    border-radius: var(--radius-lg);
-    padding: var(--space-md);
-    max-width: 100%;
-    backdrop-filter: blur(22px);
-    -webkit-backdrop-filter: blur(22px);
-    margin-bottom: 2px;
-}
-
-.topRow {
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.location {
-    font-size: var(--font-xs);
-    font-variation-settings: var(--var-sm),  "wght" 520;
-    color: var(--color-foreground);
-}
-
-.time {
-    position: absolute;
-    right: var(--space-md);
-    top: var(--space-sm);
-    text-align: right;
-    font-size: calc(var(--font-lg)*1.6);
-}
-
-.date { 
-    font-size: var(--font-xs);
-    text-align: left;
-    opacity: 0.5;
-    font-variation-settings: var(--var-sm);
+    background-color: rgba(var(--brand-grey-rgb), 0.3);
 }
