--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -5,8 +5,8 @@
     background-color: rgba(var(--brand-grey-rgb), 0);
     border-radius: var(--radius-xs);
     padding: 0 var(--space-sm);
-    font-size: calc(14rem/ 16);
-    font-variation-settings: var(--var-sm);
+    font-size: 0.85rem;
+    font-variation-settings: var(--var-md);
     height: 1.5rem;
 }
 
