--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -82,6 +82,7 @@
   }
   
   .menuText {
+    font: inherit;
     font-size: 0.85rem;
     font-variation-settings: var(--var-md);
     color: var(--color-foreground);
