--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -22,6 +22,9 @@
   --bg3: hsl(115, 100%, 71%);
   --bg4: hsl(43, 100%, 71%);
 
+
+  --bar-h: 35px;
+  --menu-safe-top: calc(var(--bar-h) + 1px);
   
 
    /* Spacing */
