fix z index menu bar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,6 +125,7 @@ h2 a::after {
     /* isolation: isolate;
     background: url("/wallpaper.jpg") center/cover no-repeat;  */
     background-color: var(--color-background);
+    z-index: 0;
   }
   
   /* Register animatable custom properties */
