--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -147,7 +147,7 @@
 }
 
 
-
+/*
 @media (max-width: 1024px) {
     .row4col {
         grid-template-columns: 1fr;
@@ -169,3 +169,4 @@
     }
 
 }
+    */
