css expand button fix

--- a/src/styles/about/notifications.module.scss
+++ b/src/styles/about/notifications.module.scss
@@ -99,7 +99,7 @@ $max-z: 20;
     margin: 5px 5px 0 0;
     padding: 0.35rem 0.75rem;
     font-size: var(--font-xxs);
-    background-color: rgba(var(--color-foreground-rgb), 0.03);
+    background-color: rgba(var(--brand-grey-rgb), 0.12);
     border: none;
     border-radius: var(--radius-lg);
     cursor: pointer;
